# __Backup_Qiita

./: CNAME  README.md  curl_tester.sh  index.md  test.md
articles/: .gitignore  README.md  article_model.py  check_rss_content.py  extract_note_articles.py  note-nomuragoro-1.xml  pyproject.toml  update_articles_from_rss.py
articles/master/: sample.rss  設計書 兼 AI コーディングルール定義書.md
articles/note/: #GAS+#スクレイピング+を便利にする「cheeriogs」を使ってスプレッドシートに登録する.json  #Webスクレイピング+#GAS+#最低賃金API+が動いていないので作り直す.json  #noteIP流出事件+note以外でもIPアドレス流出対策を考える.json  (ifttt)noteで記事を書いたらtwitterにも転送する連携がしたい(RSS).json  000009_noteのRSSフィードを取得してRSSリーダーで最新の情報を取得したい。.json  000010_システム開発：お仕事のご依頼・ご提案について.json  000015_ふたつめ！.json  000022_ボードゲームアリーナ（BGA）に参戦しました！.json  000030_カタンの遊び方考察：初期配置とダイスの期待値.json  000031_クトゥルフTRPG「毒入りスープ」道場から考えるKP(GM)の振る舞い（キーパリング）.json  000032_継承される勇者のRPGの脳みそコネコネ攻略：魔王クッキーと裏ボスの第一勅命宣言とちょっとだけキリル語のお勉強.json  000035_windowsでcronを実施させて自動でgithubに毎日草を生やすまで（CHANGELOG.mdを自動更新）.json  000046_HTMLとJavascriptで作ったものをchrome拡張機能にする.json  000048_microCMS公式ブログを読んでチュートリアルの機能を実装してみた.json  000050_noteのIPアドレス流出でコロナ禍の行動が筒抜けに？！.json  000057_（2024年の業務がほぼ終了しました）今年一年の振り返り.json  000061_ChatGPTはじめ主要サービスのAIモデルが大将棋を知らないので学習データ・兼布教したい（評価編）.json  01_ChatGPTはじめ主要サービスのAIモデルが大将棋を知らな.json  02_microCMSを無料枠で効率的に使うために、サービスをいか.json  03_デザイナーじゃないけど自作でカッコいいヘッダーやカバーイラス.json  04_「ブレインがいいよ」って聞いたから使ってみたら速攻で再.json  04_「ブレインがいいよ」って聞いたから使ってみたら速攻で再審査食.json  05_Qiitaで記事を書くのはもうやめようと思う.json  06_RPGツクールMZ発売日決定！ツクラーコラムと豆知識.json  07_デザイナーじゃないけど自作でカッコいいヘッダーやカバー.json  07_デザイナーじゃないけど自作でカッコいいヘッダーやカバーイラス.json  08_のむらは何者？プロフィール！.json  15_ふたつめ！.json  (+235 more)
(+1409 files in other folders)
